intial save, work complete. time to debug

--- a/index.html
+++ b/index.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
 <html>
+
   <head>
-    <title>Goat</title>
-<link rel="stylesheet" href="">
-<link rel="stylesheet" href="">
+    <title>Products</title>
+<link rel="stylesheet" href="css/reset.css">
+<link rel="stylesheet" href="css/style.css">
   </head>
 
   <body>
     <header>
-      <h1>Goat Picker!</h1>
+      <h1>Product</h1>
     </header>
     <main>
-      <h3>Click your Goat</h3>
+      <h3>Take your Pick</h3>
       <section>
-      <img src="" alt="">
-      <img src="" alt="">
+      <img>
+      <img>
       </section>
-      <div></div>
+      <div>Statistics </div>
     </main>
-    <script> src="js/app.js" </script>
+    <script src="js/app.js"></script>
     </head>
   </body>
+
 </html>
