changed button to View Results

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <img>
         <img>
       </section>
-      <div>Statistics </div>
+      <div>View Results </div>
       <ul>
         <li></li>
       </ul>
