--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         <li></li>
       </ul>
     </main>
+    <canvas id="canvas" width: '1200' height: '400'>
+      <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
+    </canvas>
     <script src="js/app.js"></script>
     </head>
   </body>
