structure of the chartjs.

--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
         <li></li>
       </ul>
     </main>
-    <canvas id="canvas" width: '1200' height: '400'>
-      <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
-    </canvas>
+
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
+    
+    <canvas id="canvas" width: '1200' height: '400'></canvas>
+  
     <script src="js/app.js"></script>
     </head>
   </body>
