--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <img>
         <img>
       </section>
-      <div>View Results </div>
+      <div>View Results</div>
       <ul>
         <li></li>
       </ul>
@@ -26,7 +26,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
     
-    <canvas id="canvas" width: '1200' height: '400'></canvas>
+    <canvas id="productsChart" width: '600' height: '400'></canvas>
   
     <script src="js/app.js"></script>
     </head>
