--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
     
-    <canvas id="productsChart" width: '600' height: '400'></canvas>
+    <canvas id="productsChart" width = "25" height = "5"></canvas>
   
     <script src="js/app.js"></script>
     </head>
